# coursework

./: .gitignore  Dockerfile  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: pipeline.yml
api/: __init__.py  rec_api.py  run_app.py
config/: airflow-values.yaml  scripts_dockerfile  spark_dockerfile  spark_requirements.txt
config/k8s/: pvc-coursework-storage.yml
pipelines/: airflow.py
scripts/: cli.py  db.py  db_uploader.py  dictionary.py  embedder.py  loader.py  mapper.py  prompts.py  requirements.txt  summarizer.py  uploader.py  vector_loader.py
spark/: __init__.py  aggregate_datasets.py
tests/: README.md  requirements-test.txt  test_dictionary.py  test_embedder.py  test_loader.py  test_summarizer.py  test_uploader.py  test_vector_loader.py
